загрузил полностью работу

--- a/src/components/page/_2_header.html
+++ b/src/components/page/_2_header.html
@@ -1,1 +1,34 @@
-<header class="header"></header>
+<header class="header">
+
+   <div class="header-top">
+      <div class="container">
+         <div class="header-inner">
+
+            <div class="header-logo">
+               <img class="header-logo__img1" src="img/ШБ_рус.png" alt="Синергия школа бизнеса">
+               <img class="header-logo__img" src="img/Synergy.png" alt="Synergy">
+            </div>
+
+            <div class="header-telephone">
+               <img class="header-telephone__img" src="img/phone call.png" alt="telephone">
+               <a class="header-telephone__numb" href="tel:+7(495)7878767">+7(495) 787 87 67</a>
+               <a class="header-telephone__Check" href="#">Регистрация</a>
+            </div>
+
+         </div>
+      </div>
+   </div>
+
+   <div class="header-bottom">
+      <div class="container">
+         <nav class="header-bottom__nav">
+            <ul class="header-bottom__li">
+               <li class="header-bottom__item"><a class="header-bottom__link" href="#info">О программе</a></li>
+               <li class="header-bottom__item"><a class="header-bottom__link" href="#spek">О спикере</a></li>
+               <li class="header-bottom__item3"><a class="header-bottom__link3" href="#organizer">Организатор</a></li>
+            </ul>
+         </nav>
+      </div>
+   </div>
+
+</header>
