--- a/src/components/page/_3_footer.html
+++ b/src/components/page/_3_footer.html
@@ -1,1 +1,30 @@
-<footer class="footer"></footer>
+<footer class="footer">
+   <div class="container">
+
+      <div class="footer-inner">
+         <div class="footer-img">
+            <img src="img/logo3.png" alt="logo" class="footer-img__left">
+            <img src="img/synergy3.png" alt="synergy" class="footer-img__right">
+         </div>
+
+         <div class="footer-connection">
+            <img src="img/phone call.png" alt="phone" class="footer-connection__phone">
+            <a href="tel:+7(495)7878767" class="footer-connection__number">+7 (495) 787 87 67</a>
+         </div>
+
+      </div>
+
+      <div class="footer-bot">
+         <div>
+            <p class="footer__text">© 1988 — 2018 Университет «Синергия».</p>
+            <p class="footer__text">Все права защищены.</p>
+         </div>
+         <div>
+            <a href="#" class="footer__link">Политика конфиденциальности</a>
+            <p class="footer-text__link">Разработано и продвигается —</p><a href="#" class="footer__link1">Synergy
+               Digital</a>
+         </div>
+      </div>
+
+   </div>
+</footer>
