--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -1,25 +1,75 @@
 //MEDIA: 1679
-@media screen and (max-width: 1679px) {}
+@media screen and (max-width: 1679px) {
+   .hero-img {
+      right: -225px;
+   }
+}
 
 //!MEDIA: 1679
 
 //MEDIA: 1439
-@media screen and (max-width: 1439px) {}
+@media screen and (max-width: 1439px) {
+   .hero-img {
+      display: none;
+   }
+   .consultant__img {
+      display: none;
+   }
+   .last-img {
+      display: none;
+   }
+
+   .form-input {
+      text-align: center;
+   }
+
+
+}
 
 //!MEDIA: 1439
 
 //MEDIA: 1365
-@media screen and (max-width: 1365px) {}
+@media screen and (max-width: 1365px) {
+
+}
 
 //!MEDIA: 1365
 
 //MEDIA: 1359
-@media screen and (max-width: 1359px) {}
+@media screen and (max-width: 1359px) {
+   .header-telephone__Check {
+      margin-right: 25px;
+   }
+}
 
 //!MEDIA: 1359
 
 //MEDIA: 1199
-@media screen and (max-width: 1199px) {}
+@media screen and (max-width: 1199px) {
+   .form {
+      max-width: 1140px;
+      bottom: -640px !important;
+      color: #fff;
+      margin-right: 15px;
+   }
+   .form-btn {
+      margin-top: 15px;
+   }
+   .speaker {
+      height: auto !important;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+   }
+   .speaker-btn {
+      margin: 15px auto;
+      display: block;;
+   }
+   .thanks-main {
+      padding: 220px 120px !important;
+   }
+}
 
 //!MEDIA: 1199
 
@@ -29,19 +79,151 @@
 //!MEDIA: 1023
 
 //MEDIA: 991
-@media screen and (max-width: 991px) {}
+@media screen and (max-width: 991px) {
+   .form__name,
+   .form__phone,
+   .form__email {
+      display: block;
+      width: 100%;
+      margin-bottom: 15px;
+   }
+   .form {
+      bottom: -825px!important;
+   }
+   .info {
+      padding-top: 300px!important;
+   }
+   .speaker__name,
+   .speaker__phone,
+   .speaker__email {
+      display: block;
+      width: 100%;
+      margin-bottom: 15px;
+   }
+   .Organizer-top__title{
+      margin: 0 auto 40px;
+   }
+   .Organizer-top img {
+      margin: 0 auto;
+   }
+}
 
 //!MEDIA: 991
 
 //MEDIA: 767
-@media screen and (max-width: 767px) {}
+@media screen and (max-width: 767px) {
+   .header-telephone__numb {
+      display: none;
+   }
+   .header-telephone__img {
+      display: none;
+   }
+   .header-bottom__item3,
+   .header-bottom__item {
+      margin-right: 0!important;
+      padding: 12px 20px!important;
+   }
+   .footer-inner {
+      text-align: center;
+      justify-content: center;
+   }
+   .footer-bot {
+      flex-wrap: wrap;
+      justify-content: start;
+   }
+   .footer__link {
+      text-align: left !important;
+   }
+   .footer-img__right {
+      display: none;
+   }
+}
 
 //!MEDIA: 767
 
 //MEDIA: 639
-@media screen and (max-width: 639px) {}
+@media screen and (max-width: 639px) {
+   .header-logo__img {
+      display: none;
+   }
+   .header-bottom__item3,
+   .header-bottom__item {
+      border-right: 0 solid #fff !important;
+   }
+   .info__title {
+      font-size: 50px!important;
+   }
+   .Organizer-righttop,
+   .Organizer-rightbot {
+      justify-content: center!important;
+      text-align: center;
+   }
+   .Organizer-bot {
+      flex-direction: column;
+   }
+   .Organizer-top  img{
+      display: none;
+   }
+   .Organizer-box {
+      margin-right: 0!important;
+   }
+   .Organizer-top__title {
+      font-size: 50px!important;
+   }
+   .last-text__sub {
+      font-size: 50px!important;
+      margin-bottom: 30px !important;
+   }
+   .subtext {
+      font-size: 30px !important;
+   }
+   .hero-text__sub {
+      font-size: 50px !important;
+      margin-bottom: 20px !important;
+   }
+   .form {
+      padding: 0px !important;
+   }
+
+   .form__name,
+   .form__phone,
+   .form__email {
+      padding: 10px 10px !important;
+   }
+   .form-btn {
+      padding: 10px !important;
+   }
+   .thanks-main {
+      padding: 130px 30px !important;
+   }
+   .thanks__title {
+      font-size: 50px !important;
+   }
+
+   .thanks__text {
+      font-size: 16px !important;
+   }
+}
 
 //!MEDIA: 639
+
+@media screen and (max-width: 430px) {
+   .header-bottom__li {
+      flex-direction: column;
+      margin: 0 auto;
+   }
+   .consultant__title {
+      font-size: 60px!important;
+      text-align: center;
+   }
+   .footer-connection {
+      margin-top: 15px !important;
+   }
+   .form__title {
+      font-size: 20px !important;
+      line-height: 30px !important;
+   }
+}
 
 //MEDIA: 369
 @media screen and (max-width: 369px) {}
